--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 </head>
 <body>
   <div id="root"></div>
+  <div id="export-buttons">
+    <button onclick="downloadAsImage()">Download as Image</button>
+    <button onclick="downloadAsPDF()">Download as PDF</button>
+  </div>
   <!-- React and Babel via CDN -->
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
